Fixed overflowing grid container

--- a/src/grid.module.css
+++ b/src/grid.module.css
@@ -1,7 +1,6 @@
 .gridContainer {
     background-color: rgb(81, 45, 100);;
     width: 100%;
-    height: 100vh;
 }
 .gridWrapper{
     display: flex;
@@ -26,6 +25,7 @@
     color: rgb(255, 255, 255);
     letter-spacing: 2px;
     margin-top: 60px;
+    padding: 0 10px;
 }
 .texts{
     text-align: left;
@@ -34,8 +34,8 @@
     font-size: 20px;
 }
 .cell{
-    width: 19px;
-    height: 19px;
+    width: 17px;
+    height: 17px;
     border: 0.1px solid rgb(173, 173, 173);
     border-style: outset
 }
